@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-4.5.92.ebuild 1492 RMD160 48659e57a95f3480728abd21036e4a622f140d66 SHA1 a5cab44600db1c09650c7dd020f0af63b5f41e90 SHA256 6264677a089906e4889353b40caf3552ed8b660316c4d5930b81916af3243b15
-EBUILD xfce4-9999.ebuild 1564 RMD160 1af63d33b9794d9f933a604b51bddb8b09e3a2e5 SHA1 10fb8e2e4cda0a87a2e35af0722b59aa587ca5c8 SHA256 b408db206a1099df1ccffe17c09741f7a91e663eaa103242769c10efb0c2da78
-MISC ChangeLog 972 RMD160 18c2534af318bffc450e1b75d3b70eaa759acaae SHA1 9dd67cf33254cfd83938f2d61d24a551c228c9fa SHA256 6f3d418ada54457dfeb0fe200b2853d669e9332b31b9c897e16c655e4ec00988
+EBUILD xfce4-4.5.92.ebuild 1205 RMD160 73b3a77acf1d4dfee6885a05c2986c975e87b502 SHA1 3749bde88b1a661f72784644fd5391a0ccf180d5 SHA256 4538dce2ee2b79350255a198f741435d1f450afb2528f8088a9c78070394d6f6
+EBUILD xfce4-9999.ebuild 1277 RMD160 0003b57b2f1b741b7ce27ac0a6ab215b1526cba4 SHA1 c2b31ff9bbc3885d8f0d573c172d9b257e02172d SHA256 82d0176db7b749df495428d979b1d9bd4689fd8c63ea05b13ffc4e2bb9791ca0
+MISC ChangeLog 1117 RMD160 beb27446a52e43052345558046e5f4a8397644b6 SHA1 181851dbc0ce403f73d4133c0d2e1f01da27f3b5 SHA256 683000d04862ad368cca5da5e57d82d580e13772605e3e5954b47c471c709fc3
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkzvksACgkQKhnDs22gwa8rhQCfSjJUnSHzpki+o1Y8mI4PtX+w
-PasAoLv2DllkCT+G81f4A3io28ZgurhC
-=STn0
+iEYEARECAAYFAklLmC0ACgkQKhnDs22gwa/rAQCeJVfe/FdXR4+xxHPkzYiWwwvP
+ys4AnRidIOFWZxOkGCVgte/gEuLXTHSP
+=OPYr
 -----END PGP SIGNATURE-----
